Fixed description overflow

--- a/src/components/ObservationMatrixListItem/ObservationMatrixListItem.module.scss
+++ b/src/components/ObservationMatrixListItem/ObservationMatrixListItem.module.scss
@@ -6,7 +6,7 @@
 }
 
 .ObservationMatrixListItemContent {
-  height: 100px;
+  height: 250px;
   display: flex;
   flex-direction: column;
   p {
@@ -14,6 +14,12 @@
   }
 }
 
+.Description {
+  height: 152px;
+  overflow: hidden;
+}
+
 .ListButton {
-  margin-right: 5px;
+  // margin-right: 5px;
+  margin: 5px;
 }
